hphp/hack/test/typecheck/functional_higher_order.php.like_types.exp
File "functional_higher_order.php", line 19, characters 14-21:
Typing error (Typing[4323])
File "functional_higher_order.php", line 12, characters 12-12:
Some type constraint(s) are violated here
File "functional_higher_order.php", line 12, characters 12-12:
T is a constrained type parameter
File "functional_higher_order.php", line 19, characters 14-15:
Expected num because this is used in an arithmetic operation
File "functional_higher_order.php", line 12, characters 12-12:
But got dynamic
